# breakout

./: CMakeLists.txt  run.sh
include/: game.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
resources/shaders/: vertexShader.vs
src/: game.cpp  glad.c  main.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
